// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mutation: createOnePost (Drizzle v2 Pure Object Syntax) > should create a single post with non-null fields and return the created record 1`] = `
{
  "__typename": "Post",
  "author": {
    "__typename": "User",
    "name": "Agripina",
  },
  "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
  "content": "Required Content Body",
  "published": true,
  "title": "New Single Post",
}
`;

exports[`createOne > create 1`] = `
{
  "createOnePost": {
    "__typename": "Post",
    "author": {
      "__typename": "User",
      "email": "residual_carroll@hotmail.fr",
      "name": "Agripina",
      "roles": [
        "ADMIN",
        "ADMIN",
        "ADMIN",
        "ADMIN",
        "USER",
        "ADMIN",
        "USER",
        "USER",
        "ADMIN",
        "ADMIN",
      ],
    },
    "authorCount": 1,
    "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "categories": [],
    "categoriesCount": 0,
    "content": "Test",
    "published": true,
    "title": "title",
  },
}
`;

exports[`createOne > create may to many 1`] = `
{
  "createOnePost": {
    "__typename": "Post",
    "author": null,
    "authorCount": 0,
    "authorId": null,
    "categories": [
      {
        "__typename": "Category",
        "name": "Aukai",
      },
      {
        "__typename": "Category",
        "name": "Clotile",
      },
      {
        "__typename": "Category",
        "name": "Lia",
      },
    ],
    "categoriesCount": 3,
    "content": "many to many",
    "published": true,
    "title": "many to many",
  },
}
`;

exports[`createOne > create may to many retry 1`] = `
{
  "createOnePost": {
    "__typename": "Post",
    "author": null,
    "authorCount": 0,
    "authorId": null,
    "categories": [
      {
        "__typename": "Category",
        "name": "Rayner",
      },
      {
        "__typename": "Category",
        "name": "Titiana",
      },
      {
        "__typename": "Category",
        "name": "Tobin",
      },
    ],
    "categoriesCount": 3,
    "content": "many to many",
    "published": true,
    "title": "many to many",
  },
}
`;

exports[`createOne > create no relay 1`] = `
{
  "createOnePost": {
    "__typename": "Post",
    "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "content": "Test",
    "published": true,
    "title": "title",
  },
}
`;
